# docs-specs

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  template.rst  tox.ini
doc/source/: conf.py  index.rst
specs/: skeleton.rst  template.rst
specs/juno/: common-glossary-setup.rst  create-networking-guide.rst  heat-templates.rst  networking-guide.rst  reorg-gating.rst
specs/kilo/: audio-visual.rst  convert-training-xml-into-rst  draft-publishing.rst  hands-on-assessments.rst  installguide-kilo.rst  migrate-to-new-web-design.rst  move-driver-docs.rst  openstack-firstapp.rst  osbash-color.rst  training-guides-icehouse-release.rst  training-guides-osbash-color.rst  training-vm-in-public-cloud.rst
specs/liberty/: api-site.rst  arch-guide.rst  audio-visual.rst  docs-contributor-guide.rst  ha-guide.rst  installguide-liberty-debian.rst  installguide-liberty-rst.rst  installguide-liberty-update.rst  installguide-liberty.rst  manila-config-ref.rst  openstacklabs.rst  reorganise-user-guides  reorganise-user-guides.rst  training-labs.rst
specs/mitaka/: add-magnum-to-the-installation-guide.rst  api-guides-mitaka-vision.rst  app-guides-mitaka-vision.rst  arch-guide-mitaka-reorg.rst  archguide-mitaka-reorg.rst  archguide-mitaka-rst.rst  cli-ref-rst.rst  config-ref-common-options.rst  config-ref-rst.rst  create-magnum-install-guide.rst  create-manila-install-guide.rst  image-guide-rst.rst  improve-ops-guide.rst  installguide-mitaka.rst  networkguide-ovn.rst  networkguide-versioning.rst  ops-guide-rst.rst  publish-stable-translation.rst  review-docimpact.rst  training-labs-pxe-server.rst  trove-install-section.rst  ui-content-guidelines.rst  upgrades.rst  use-openstack-command.rst  user-guides-mitaka-reorg.rst  zaqar-config-ref.rst
specs/newton/: add-magnum-to-the-installation-guide.rst  arch-guide-restructure.rst  consistency-file-rename.rst  contributor-guide-release-chapter.rst  contributor-guide-reorg.rst  docbook-removal.rst  improve-glossary-usage.rst  installguide.rst  project-specific-installguides.rst  ui-guidelines.rst  (+5 more)
(+16 files in other folders)
