[metadata]
name = docs-specs
summary = OpenStack Documentation Program Specs
description-file =
    README.rst
author = OpenStack
author-email = openstack-docs@lists.openstack.org
home-page = http://specs.openstack.org/openstack/docs-specs/
classifier =
    Intended Audience :: Writers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[build_sphinx]
builders = html
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1
